[gd_scene load_steps=15 format=3 uid="uid://cb747ujkaerl0"]

[ext_resource type="Texture2D" uid="uid://bhto0guytw23p" path="res://assets/PlayerAnimations.png" id="1_1s7hx"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_6vhkq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j4m6d"]
atlas = ExtResource("1_1s7hx")
region = Rect2(32, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hvsu"]
atlas = ExtResource("1_1s7hx")
region = Rect2(64, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jnfr"]
atlas = ExtResource("1_1s7hx")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ivdv"]
atlas = ExtResource("1_1s7hx")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wro54"]
atlas = ExtResource("1_1s7hx")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs6te"]
atlas = ExtResource("1_1s7hx")
region = Rect2(32, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbiy0"]
atlas = ExtResource("1_1s7hx")
region = Rect2(64, 128, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8llt"]
atlas = ExtResource("1_1s7hx")
region = Rect2(0, 128, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tmnhb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4m6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hvsu")
}],
"loop": true,
"name": &"Deita",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jnfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ivdv")
}],
"loop": false,
"name": &"Meio",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wro54")
}],
"loop": true,
"name": &"MeioParado",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs6te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbiy0")
}],
"loop": false,
"name": &"Pé",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8llt")
}],
"loop": true,
"name": &"PéParado",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7yqt3"]
radius = 7.0
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n8cor"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_ybk78"]
radius = 31.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("2_6vhkq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_tmnhb")
animation = &"Meio"
frame = 1
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("CapsuleShape2D_7yqt3")

[node name="Hand" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hand"]
position = Vector2(10, -12)
shape = SubResource("CircleShape2D_n8cor")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hand"]
position = Vector2(10, 11)
shape = SubResource("CircleShape2D_n8cor")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_ybk78")

[connection signal="area_entered" from="Range" to="." method="_on_alcança_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_alcança_area_exited"]
